[package]
name = "rusty_rogue"
version = "0.1.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

[dependencies]
rand = "0.3.8"
num_cpus = "0.2.6"
rustc-serialize = "0.3.14"

piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"

sfml = "0.9.3"

# stuff i made! :D
recs = "^1.0.1"
poglgame = "^0.1.0"